# intro-to-transformers

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  custom-theme.js  custom.css  empty.md  intro.md  main.py  myst.yml  outro.md  package-lock.json  package.json  pyproject.toml  remove_opening_lines.py  run_all.py
.github/workflows/: claude.yml
building-a-transformer/: 00_introduction.ipynb  01_embeddings.ipynb  02_attention.ipynb  03_multi_head_attention.ipynb  04_feedforward.ipynb  05_transformer_block.ipynb  06_complete_model.ipynb  07_training.ipynb  08_kv_cache.ipynb  09_interpretability.ipynb  intro.md
fine-tuning-a-transformer/: 00_introduction.ipynb  01_why_post_training.ipynb  02_project_overview.ipynb  03_sft_introduction.ipynb  04_sft_formatting.ipynb  05_sft_loss_masking.ipynb  06_sft_training.ipynb  07_sft_lora.ipynb  08_reward_introduction.ipynb  09_reward_preference_data.ipynb  10_reward_training.ipynb  11_reward_evaluation.ipynb  12_rlhf_introduction.ipynb  13_rlhf_ppo.ipynb  14_rlhf_kl_penalty.ipynb  15_rlhf_dynamics.ipynb  16_rlhf_reference.ipynb  17_dpo_introduction.ipynb  18_dpo_vs_rlhf.ipynb  19_dpo_loss.ipynb  20_dpo_training.ipynb  21_advanced_memory.ipynb  22_advanced_hyperparams.ipynb  23_advanced_evaluation.ipynb  24_advanced_pitfalls.ipynb  25_try_it.ipynb  intro.md  run_all.py
from-noise-to-images/: 00_introduction.ipynb  01_flow_matching_basics.ipynb  02_diffusion_transformer.ipynb  03_class_conditioning.ipynb  04_text_conditioning.ipynb  05_latent_diffusion.ipynb  intro.md
from-noise-to-images/from_noise_to_images/: __init__.py  sampling.py  train.py
reasoning-with-transformers/: 00_introduction.ipynb  01_chain_of_thought.ipynb  02_self_consistency.ipynb  03_tree_of_thoughts.ipynb  04_process_reward_model.ipynb  05_best_of_n.ipynb  06_mcts.ipynb  07_budget_forcing.ipynb  08_grpo.ipynb  09_distillation.ipynb  intro.md
scripts/: add_notebook_descriptions.py
understanding-gradients/: 00_introduction.ipynb  01_tokenization_embeddings.ipynb  02_qkv_projections.ipynb  03_attention.ipynb  04_multi_head.ipynb  05_feedforward.ipynb  06_layer_norm.ipynb  07_loss.ipynb  08_grad_loss.ipynb  09_grad_backprop.ipynb  10_optimizer.ipynb  intro.md
wheels/: bitsandbytes-0.49.0.dev0-cp312-cp312-linux_x86_64.whl
