[project]
name = "intro-to-transformers"
version = "0.1.0"
description = "An Introduction to Transformers - Educational notebooks on transformers and diffusion models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.0.0",
    "tiktoken>=0.11.0",
    "torch>=2.10.0.dev20251124",
    "torchvision>=0.25.0.dev20251202",
    "transformers>=4.30",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "jupyter>=1.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "scipy>=1.11.0",
]

[tool.uv.sources]
bitsandbytes = { path = "wheels/bitsandbytes-0.49.0.dev0-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
