[project]
name = "intro-to-transformers"
version = "0.1.0"
description = "An Introduction to Transformers - Educational notebooks on transformers and diffusion models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets",
    "tiktoken",
    "torch",
    "torchvision",
    "transformers",
    "matplotlib",
    "numpy",
    "jupyter",
    "bitsandbytes",
    "accelerate",
    "peft",
    "scipy",
]

[tool.uv]
required-version = ">=0.4.0"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]
