[project]
name = "intro-to-transformers"
version = "0.1.0"
description = "An Introduction to Transformers - Educational notebooks on transformers and diffusion models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=2.20.0",
    "tiktoken",
    "torch",
    "torchvision",
    "transformers",
    "matplotlib",
    "numpy",
    "jupyter",
    "bitsandbytes",
    "accelerate",
    "peft",
    "scipy",
    "hf_xet",
]

[tool.uv]
required-version = ">=0.4.0"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
]
